# FastApi_urban

./: pyproject.toml
app/: alembic.ini  main.py  schemas.py  taskmanager.db
app/backend/: db.py  db_depends.py
app/migrations/: env.py
app/migrations/versions/: 15614b226abd_initial_migration.py  5bb820203875_rename_relation_foreignkey_in_task_model.py
app/models/: task.py  user.py
app/routers/: task.py  user.py
